--- a/main.css
+++ b/main.css
@@ -5,15 +5,123 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
+  background-color: black;  /* потом убрать */
+  color: white;
 }
 
-.menu { /* меню наложилось друг на друга, но это выравняем потом? */
+body {
+  margin: 0;
+}
+
+h1, h2, h3, h4, h5, p {
+  margin: 0;
+}
+
+a {
+  text-decoration: none;
+}
+
+address {
+  font-style: normal;
+}
+
+ul, li {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.container {
+  max-width: 1141px;
+  margin: 0 auto;
+}
+
+.header {
+  position: relative;
+  height: 123px;
+  margin-bottom: 150px;
+}
+
+.logo, .contacts, .menu {
+  position: absolute;
+}
+
+.logo {
+  top: 29px;
+}
+
+.menu {
+  top: 42px;
+  left: 200px;
+} 
+ 
+.menu__item {
+  display: inline-block; 
+  vertical-align: middle;
+  margin-right: 54px;
+  font: 14px/1.36 'Open Sans', sans-serif;
+}
+
+.menu:last-child {
+  margin-right : 0px;
+}
+
+.contacts {
+  right: 0px;
+  top: 27px;
+  text-align: right;
+}
+
+.contacts__tel {
+  font: 26px/1.36 'Open Sans', sans-serif;
+}
+
+.contacts__graph {
+  display: block;
+  font: 13px/1.36 'Open Sans', sans-serif;
+}
+
+.preview__title {
+  width: 520px;
+  font: 700 72px/1.2 sans-serif;
+  margin-bottom: 28px;
+}
+
+.preview__text {
+  font: 18px/1.11 'Open Sans', sans-serif;
+  margin-bottom: 33px;
+}
+
+footer {
+  position: relative;
+}
+
+.button {
+  background-color: #F5170E;
+  border-radius: 35px;
+  padding: 18px 40px;
+  color:white;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+
+/* * {
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+
+.menu { 
   font: 14px/1.36 'Open Sans', sans-serif;
 }
 .contacts__tel {
   font: 26px/1.36 'Open Sans', sans-serif;
 }
-
 .contacts__graph {
   font: 13px/1.36 'Open Sans', sans-serif;
 }
@@ -64,4 +172,4 @@ h3 {
 
 .contacts__text {
   font: 11px/1.81 'Open Sans', sans-serif;
-}
+} */
