--- a/CSS/blocks/news.css
+++ b/CSS/blocks/news.css
@@ -16,11 +16,11 @@
 .news__item {
   /* display: inline-block; */
   margin-right: 24px;  
-  /* width: 557px; */
+  width: 557px; 
   height: 394px;
   display: flex;
   vertical-align: top;
-  /* position: relative;  */
+  position: relative;  
   border-radius: 5px;
   overflow: hidden;
   flex: 1;
@@ -37,16 +37,17 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+  position: absolute;
 }
 
 .news-content {
   /* bottom: 0; */
   padding: 0px 30px;
   min-height: 142px;
-  display: flex;
+  /* display: flex; */
   align-items: flex-end;
-  /* z-index: 10;
-  position: relative;  */
+  /* z-index: 10; */
+  position: relative;  
 }
 
 .news__date {
@@ -59,7 +60,7 @@
 .news__subtitle {
   font: 700 24px'Open Sans', sans-serif;
   color: #fff;
-  margin-bottom: 4px;
+  margin-bottom: -13px;
 }
 
 .news__text p{
