--- a/CSS/blocks/welcomepage.css
+++ b/CSS/blocks/welcomepage.css
@@ -8,6 +8,7 @@
   align-items: center;
   justify-content: center;
   background: url(../../images/bg.png) center center no-repeat;
+  background-size: cover;
 }
 
 .welcome-container {
